--- a/it_modernization/aliases.yaml
+++ b/it_modernization/aliases.yaml
@@ -8,12 +8,15 @@ aliases:
 
 - id: OPM-1
   agency: OPM
+  comment: Doesn't show up in any document releases, but must exist, right?
 
 - id: OPM-2
   agency: OPM
+  name: Riccardo Biasini
   evidence:
   - Onboarded on 2025-01-20 as a volunteer SGE
   - This is likely one of the other young DOGE crew like Jordan Wick or Luke Farritor, etc.
+  - PD Number 6A39741 in redacted documents matches one for Riccard Biasini in a FOIA release from OPM
   events:
   - date: 2025-01-20
     type: onboarded
@@ -35,6 +38,7 @@ aliases:
   evidence:
   - This is the same person as ED-1 because there is a detail document that appears with two diff redacted names
   - Detail to SSA is signed on 2025-02-12
+  - PD number 6A39740 = one listed for Akash Bobba
   - See evidence that ED-1 is Akash Bobba
   events:
   - date: 2025-01-20
@@ -102,8 +106,11 @@ aliases:
 
 - id: OPM-4
   agency: OPM
+  name: Nikhil Rajpal
   evidence:
   - Onboarded on 2025-01-24 as a volunteer SGE with the title Expert
+  - Only person onboarded as an expert on 2025-01-24
+  - null
   events:
   - date: 2025-01-24
     type: onboarded
@@ -119,9 +126,11 @@ aliases:
 
 - id: OPM-5
   agency: OPM
+  name: Gavin Kliger
   evidence:
   - Onboarded on 2025-01-20 as a provisional appt not to exceed 2025-05-20
   - Senior Advisor to the Director for IT
+  - PD 6A38025 = matches for Gavin Kliger in a FOIA release
   - GS-15/10 with pay of $195,200
   - Converted to an excepted appointment on 2025-02-18
   events:
@@ -148,9 +157,11 @@ aliases:
 
 - id: OPM-6
   agency: OPM
+  name: Austin Raynor
   evidence:
   - Onboarded on 2025-01-24 as a vounteer SGE with a term not to exceed 2025-07-22
   - This is likely one of the other young DOGE crew like Jordan Wick or Luke Farritor, etc.
+  - PD 6A39748 = Austin Raynor in another document
   events:
   - date: 2025-01-24
     type: onboarded
